0.04

0.03 2013-11-13
 - Add 'readme_from' directive to Makefile.PL.
 - Add minimal Perl version.
 - Add some tests.

0.02 2013-09-21
 - Rewrite Changes file to CPAN::Changes::SPEC format.

0.01 2013-09-19
 - First version.