@@ -1,4 +1,5 @@
 0.04
+ - Update Module::Install to 1.08 version.
 
 0.03 2013-11-13
  - Add 'readme_from' directive to Makefile.PL.
